data/derived/fa15/progs/unify/prog1734.ml.out
Characters 29-30:
  let f a x = x x a in
                ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
